[gd_scene load_steps=12 format=3 uid="uid://cndg14sw3yyuh"]

[ext_resource type="Script" uid="uid://8511w34spff4" path="res://scenes/animated_button/animated_button.gd" id="1_6r0wh"]
[ext_resource type="Theme" uid="uid://d3dsr3iudi3gj" path="res://theme/game.tres" id="1_dwnpe"]
[ext_resource type="Texture2D" uid="uid://bmyalw7esqyyo" path="res://assets/ui/lilypad_decor_merged.png" id="3_i5lqg"]
[ext_resource type="Texture2D" uid="uid://bwhb54ybp7x41" path="res://assets/ui/flower_decor_merged.png" id="4_gq6ue"]
[ext_resource type="PackedScene" uid="uid://c3p1hirdbrrp3" path="res://scenes/tile/lily_flower_decor.tscn" id="5_hxdnn"]

[sub_resource type="Animation" id="Animation_i5lqg"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Control/LilyFlower1:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.6551743]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Control/LilyFlower1:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 0.83, 0.83, 1)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Control/LilyFlower2:rotation")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.6551743]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Control/LilyFlower2:modulate")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 0.83, 0.83, 1)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("Control/LilypadDecor:scale")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.49266863, 0.35359114)]
}

[sub_resource type="Animation" id="Animation_6r0wh"]
resource_name = "click"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.3, 1.3)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 1), Vector2(-10, 10)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0.18000486, 0.18000486, 0.18000486, 1)]
}

[sub_resource type="Animation" id="Animation_dwnpe"]
resource_name = "hover"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.5, 1.5)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(-1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = false
tracks/2/path = NodePath("Control/LilyFlower1:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.46666667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [4.71238898038469, 1.6551743]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = false
tracks/3/path = NodePath("Control/LilyFlower1:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.3, 0.56666666),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 0.8180136, 0.8182591, 1), Color(1, 0.73510575, 0.73771966, 1), Color(0.99999994, 0.92234355, 0.92164576, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = false
tracks/4/path = NodePath("Control/LilyFlower2:rotation")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [1.6551743, -4.71238898038469]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = false
tracks/5/path = NodePath("Control/LilyFlower2:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0.03333333, 0.3, 0.56666666),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 0.83, 0.83, 1), Color(1, 0.55382174, 0.5730498, 1), Color(0.99999994, 0.90418375, 0.90356636, 1)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = false
tracks/6/path = NodePath("Control/LilypadDecor:scale")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0.49266863, 0.35359114), Vector2(0.557, 0.4)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_nadi8"]
_data = {
&"RESET": SubResource("Animation_i5lqg"),
&"click": SubResource("Animation_6r0wh"),
&"hover": SubResource("Animation_dwnpe")
}

[sub_resource type="Animation" id="Animation_gq6ue"]
resource_name = "hover"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Control/LilyFlower1:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.46666667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [4.71238898038469, 1.6551743]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Control/LilyFlower1:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3, 0.56666666),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 0.8180136, 0.8182591, 1), Color(1, 0.73510575, 0.73771966, 1), Color(0.99999994, 0.92234355, 0.92164576, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Control/LilyFlower2:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [1.6551743, -4.71238898038469]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Control/LilyFlower2:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.03333333, 0.3, 0.56666666),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 0.83, 0.83, 1), Color(1, 0.55382174, 0.5730498, 1), Color(0.99999994, 0.90418375, 0.90356636, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Control/LilypadDecor:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0.49266863, 0.35359114), Vector2(0.557, 0.4)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_hxdnn"]
_data = {
&"hover": SubResource("Animation_gq6ue")
}

[node name="AnimatedButton" type="Button"]
offset_right = 168.0
offset_bottom = 63.999985
theme = ExtResource("1_dwnpe")
text = "Button"
script = ExtResource("1_6r0wh")
metadata/_edit_group_ = true

[node name="ButtonAnim" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
&"": SubResource("AnimationLibrary_nadi8")
}

[node name="FlowerAnim" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
&"": SubResource("AnimationLibrary_hxdnn")
}

[node name="Control" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="LilypadDecor" type="TextureRect" parent="Control"]
modulate = Color(1, 0.62, 0.62, 0.5882353)
show_behind_parent = true
layout_mode = 0
offset_top = -1.0
offset_right = 341.0
offset_bottom = 180.0
scale = Vector2(0.49266863, 0.35359114)
texture = ExtResource("3_i5lqg")

[node name="FlowerDecor" type="Sprite2D" parent="Control"]
visible = false
modulate = Color(1, 0.62, 0.62, 0.6313726)
position = Vector2(92, 24)
scale = Vector2(0.4583333, 0.39024395)
texture = ExtResource("4_gq6ue")

[node name="LilyFlower1" parent="Control" instance=ExtResource("5_hxdnn")]
modulate = Color(1, 0.83, 0.83, 1)
position = Vector2(16, 16)
scale = Vector2(0.2, 0.2)

[node name="LilyFlower2" parent="Control" instance=ExtResource("5_hxdnn")]
modulate = Color(1, 0.83, 0.83, 1)
position = Vector2(120.000015, 48.000004)
scale = Vector2(0.15, 0.15)
